gosciparse.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | vdecl SEMI decls
   4        | udecl decls
   5        | vtdecl decls
   6        | fdecl decls

   7  vdecl_list :
   8             | vdecl SEMI vdecl_list

   9  ID : UID
  10     | LID

  11  vdecl : typ LID unit_expr_opt
  12        | typ LID unit_expr_opt ASSIGN expr

  13  typ : INT
  14      | BOOL
  15      | FLOAT
  16      | CHAR
  17      | STRING
  18      | UID

  19  unit_expr_opt :
  20                | LBRACK ID RBRACK unit_expr_opt
  21                | LBRACK ID ILIT RBRACK unit_expr_opt
  22                | LBRACK ID MINUS ILIT RBRACK unit_expr_opt

  23  units_opt :
  24            | unit_list

  25  unit_list : ID
  26            | ID VERBAR unit_list

  27  udecl_args : expr ID
  28             | units_opt

  29  udecl : UNIT ID LBRACE udecl_args RBRACE

  30  type_list : typ
  31            | typ VERBAR type_list

  32  vtdecl : VARTYPE ID LBRACE type_list RBRACE
  33         | STRUCT ID LBRACE vdecl_list RBRACE

  34  return_typ : typ ID unit_expr_opt
  35             | typ unit_expr_opt

  36  fdecl : FUNC ID LPAREN formals_opt RPAREN return_typ LBRACE vdecl_list statement_list RBRACE

  37  formals_opt :
  38              | formals_list

  39  formals_list : vdecl
  40               | vdecl COMMA formals_list

  41  blocked : block
  42          | if_stmt
  43          | for_stmt
  44          | switch_stmt
  45          | match_stmt

  46  block : LBRACE statement_list RBRACE

  47  expr_list : expr
  48            | expr COMMA expr_list

  49  statement_list :
  50                 | blocked statement_list
  51                 | statement SEMI statement_list

  52  statement : labeled_stmt
  53            | expr_stmt
  54            | return_stmt
  55            | block
  56            | if_stmt
  57            | switch_stmt
  58            | match_stmt
  59            | for_stmt
  60            | loop_ctrl_stmt
  61            | fall_through_stmt

  62  loop_ctrl_stmt : break_stmt
  63                 | continue_stmt

  64  labeled_stmt : label COLON statement

  65  label : LID

  66  expr_stmt : expr

  67  return_stmt : RETURN
  68              | RETURN expr_list

  69  if_stmt : IF LPAREN expr RPAREN block
  70          | IF LPAREN expr RPAREN block ELSE if_stmt
  71          | IF LPAREN expr RPAREN block ELSE block
  72          | IF LPAREN expr SEMI expr RPAREN block
  73          | IF LPAREN expr SEMI expr RPAREN block ELSE if_stmt
  74          | IF LPAREN expr SEMI expr RPAREN block ELSE block

  75  switch_stmt : SWITCH LPAREN RPAREN LBRACE expr_case_list RBRACE
  76              | SWITCH LPAREN expr SEMI RPAREN LBRACE expr_case_list RBRACE
  77              | SWITCH LPAREN expr RPAREN LBRACE expr_case_list RBRACE
  78              | SWITCH LPAREN expr SEMI expr RPAREN LBRACE expr_case_list RBRACE

  79  expr_case_list : expr_case_clause expr_case_list
  80                 | expr_case_clause

  81  expr_case_clause : expr_switch_case COLON statement_list

  82  expr_switch_case : CASE expr_list
  83                   | DEFAULT

  84  match_stmt : MATCH LPAREN ID IASSIGN expr RPAREN LBRACE match_clause_list RBRACE
  85             | MATCH LPAREN expr SEMI ID IASSIGN expr RPAREN LBRACE match_clause_list RBRACE

  86  match_clause_list : match_clause match_clause_list
  87                    | match_clause

  88  match_clause : match_case COLON statement_list

  89  match_case : CASE typ
  90             | DEFAULT

  91  for_stmt : FOR LPAREN condition RPAREN block
  92           | FOR LPAREN for_clause RPAREN block
  93           | FOR LPAREN range_clause RPAREN block

  94  condition : expr

  95  for_clause : SEMI SEMI
  96             | init_stmt SEMI SEMI
  97             | SEMI condition SEMI
  98             | SEMI SEMI post_stmt
  99             | init_stmt SEMI condition SEMI
 100             | init_stmt SEMI SEMI post_stmt
 101             | SEMI condition SEMI post_stmt
 102             | init_stmt SEMI condition SEMI post_stmt

 103  init_stmt : expr_stmt

 104  post_stmt : expr

 105  range_clause : ID COLON expr

 106  break_stmt : BREAK
 107             | BREAK label

 108  continue_stmt : CONTINUE
 109                | CONTINUE label

 110  fall_through_stmt : FALL

 111  structlit_expr : UID LBRACE args_opt RBRACE

 112  expr : ILIT unit_expr_opt
 113       | BLIT
 114       | FLIT unit_expr_opt
 115       | CLIT
 116       | SLIT
 117       | LID
 118       | LID DOT LID
 119       | expr PLUS expr
 120       | expr MINUS expr
 121       | expr MUL expr
 122       | expr DIV expr
 123       | expr POW expr
 124       | expr MOD expr
 125       | expr EQ expr
 126       | expr GEQ expr
 127       | expr NEQ expr
 128       | expr LEQ expr
 129       | expr GT expr
 130       | expr LT expr
 131       | expr AND expr
 132       | expr OR expr
 133       | NOT expr
 134       | MINUS expr
 135       | expr INC
 136       | expr DEC
 137       | LID ASSIGN expr
 138       | LID ASSIGN structlit_expr
 139       | LID DOT LID ASSIGN expr
 140       | LPAREN expr RPAREN
 141       | LID LPAREN args_opt RPAREN

 142  args_opt :
 143           | args

 144  args : expr
 145       | expr COMMA args

 146  tokenseq : tokens EOF

 147  tokens :
 148         | one_token tokens

 149  one_token : LPAREN
 150            | RPAREN
 151            | LBRACK
 152            | RBRACK
 153            | LBRACE
 154            | RBRACE
 155            | COLON
 156            | SEMI
 157            | COMMA
 158            | DOT
 159            | VERBAR
 160            | PLUS
 161            | MINUS
 162            | MUL
 163            | DIV
 164            | MOD
 165            | POW
 166            | MATMUL
 167            | INC
 168            | DEC
 169            | ASSIGN
 170            | IASSIGN
 171            | EQ
 172            | NEQ
 173            | LT
 174            | NOT
 175            | AND
 176            | OR
 177            | VAR
 178            | CONST
 179            | STRUCT
 180            | UNIT
 181            | VARTYPE
 182            | IF
 183            | ELSE
 184            | SWITCH
 185            | MATCH
 186            | CASE
 187            | DEFAULT
 188            | FALL
 189            | WHILE
 190            | FOR
 191            | CONTINUE
 192            | BREAK
 193            | FUNC
 194            | RETURN
 195            | BOOL
 196            | INT
 197            | FLOAT
 198            | CHAR
 199            | STRING
 200            | TENSOR
 201            | BLIT
 202            | ILIT
 203            | FLIT
 204            | CLIT
 205            | SLIT
 206            | LID
 207            | UID

 208  %entry% : '\001' program
 209          | '\002' tokenseq

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . program  (208)
	decls : .  (2)

	STRUCT  shift 4
	UNIT  shift 5
	VARTYPE  shift 6
	FUNC  shift 7
	BOOL  shift 8
	INT  shift 9
	FLOAT  shift 10
	CHAR  shift 11
	STRING  shift 12
	UID  shift 13
	EOF  reduce 2

	program  goto 14
	decls  goto 15
	vdecl  goto 16
	udecl  goto 17
	vtdecl  goto 18
	fdecl  goto 19
	typ  goto 20


state 2
	%entry% : '\002' . tokenseq  (209)
	tokens : .  (147)

	SEMI  shift 21
	LPAREN  shift 22
	RPAREN  shift 23
	LBRACK  shift 24
	RBRACK  shift 25
	LBRACE  shift 26
	RBRACE  shift 27
	COLON  shift 28
	DOT  shift 29
	VERBAR  shift 30
	PLUS  shift 31
	MINUS  shift 32
	MUL  shift 33
	DIV  shift 34
	MOD  shift 35
	POW  shift 36
	MATMUL  shift 37
	INC  shift 38
	DEC  shift 39
	ASSIGN  shift 40
	IASSIGN  shift 41
	EQ  shift 42
	NEQ  shift 43
	LT  shift 44
	NOT  shift 45
	AND  shift 46
	OR  shift 47
	VAR  shift 48
	CONST  shift 49
	STRUCT  shift 50
	UNIT  shift 51
	VARTYPE  shift 52
	IF  shift 53
	ELSE  shift 54
	SWITCH  shift 55
	MATCH  shift 56
	CASE  shift 57
	DEFAULT  shift 58
	FALL  shift 59
	WHILE  shift 60
	FOR  shift 61
	CONTINUE  shift 62
	BREAK  shift 63
	FUNC  shift 64
	BOOL  shift 65
	INT  shift 66
	FLOAT  shift 67
	CHAR  shift 68
	STRING  shift 69
	TENSOR  shift 70
	RETURN  shift 71
	COMMA  shift 72
	BLIT  shift 73
	ILIT  shift 74
	FLIT  shift 75
	CLIT  shift 76
	SLIT  shift 77
	LID  shift 78
	UID  shift 79
	EOF  reduce 147

	tokenseq  goto 80
	tokens  goto 81
	one_token  goto 82


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	vtdecl : STRUCT . ID LBRACE vdecl_list RBRACE  (33)

	LID  shift 83
	UID  shift 84
	.  error

	ID  goto 85


state 5
	udecl : UNIT . ID LBRACE udecl_args RBRACE  (29)

	LID  shift 83
	UID  shift 84
	.  error

	ID  goto 86


state 6
	vtdecl : VARTYPE . ID LBRACE type_list RBRACE  (32)

	LID  shift 83
	UID  shift 84
	.  error

	ID  goto 87


state 7
	fdecl : FUNC . ID LPAREN formals_opt RPAREN return_typ LBRACE vdecl_list statement_list RBRACE  (36)

	LID  shift 83
	UID  shift 84
	.  error

	ID  goto 88


state 8
	typ : BOOL .  (14)

	.  reduce 14


state 9
	typ : INT .  (13)

	.  reduce 13


state 10
	typ : FLOAT .  (15)

	.  reduce 15


state 11
	typ : CHAR .  (16)

	.  reduce 16


state 12
	typ : STRING .  (17)

	.  reduce 17


state 13
	typ : UID .  (18)

	.  reduce 18


state 14
	%entry% : '\001' program .  (208)

	.  reduce 208


state 15
	program : decls . EOF  (1)

	EOF  shift 89
	.  error


state 16
	decls : vdecl . SEMI decls  (3)

	SEMI  shift 90
	.  error


state 17
	decls : udecl . decls  (4)
	decls : .  (2)

	STRUCT  shift 4
	UNIT  shift 5
	VARTYPE  shift 6
	FUNC  shift 7
	BOOL  shift 8
	INT  shift 9
	FLOAT  shift 10
	CHAR  shift 11
	STRING  shift 12
	UID  shift 13
	EOF  reduce 2

	decls  goto 91
	vdecl  goto 16
	udecl  goto 17
	vtdecl  goto 18
	fdecl  goto 19
	typ  goto 20


state 18
	decls : vtdecl . decls  (5)
	decls : .  (2)

	STRUCT  shift 4
	UNIT  shift 5
	VARTYPE  shift 6
	FUNC  shift 7
	BOOL  shift 8
	INT  shift 9
	FLOAT  shift 10
	CHAR  shift 11
	STRING  shift 12
	UID  shift 13
	EOF  reduce 2

	decls  goto 92
	vdecl  goto 16
	udecl  goto 17
	vtdecl  goto 18
	fdecl  goto 19
	typ  goto 20


state 19
	decls : fdecl . decls  (6)
	decls : .  (2)

	STRUCT  shift 4
	UNIT  shift 5
	VARTYPE  shift 6
	FUNC  shift 7
	BOOL  shift 8
	INT  shift 9
	FLOAT  shift 10
	CHAR  shift 11
	STRING  shift 12
	UID  shift 13
	EOF  reduce 2

	decls  goto 93
	vdecl  goto 16
	udecl  goto 17
	vtdecl  goto 18
	fdecl  goto 19
	typ  goto 20


state 20
	vdecl : typ . LID unit_expr_opt  (11)
	vdecl : typ . LID unit_expr_opt ASSIGN expr  (12)

	LID  shift 94
	.  error


state 21
	one_token : SEMI .  (156)

	.  reduce 156


state 22
	one_token : LPAREN .  (149)

	.  reduce 149


state 23
	one_token : RPAREN .  (150)

	.  reduce 150


state 24
	one_token : LBRACK .  (151)

	.  reduce 151


state 25
	one_token : RBRACK .  (152)

	.  reduce 152


state 26
	one_token : LBRACE .  (153)

	.  reduce 153


state 27
	one_token : RBRACE .  (154)

	.  reduce 154


state 28
	one_token : COLON .  (155)

	.  reduce 155


state 29
	one_token : DOT .  (158)

	.  reduce 158


state 30
	one_token : VERBAR .  (159)

	.  reduce 159


state 31
	one_token : PLUS .  (160)

	.  reduce 160


state 32
	one_token : MINUS .  (161)

	.  reduce 161


state 33
	one_token : MUL .  (162)

	.  reduce 162


state 34
	one_token : DIV .  (163)

	.  reduce 163


state 35
	one_token : MOD .  (164)

	.  reduce 164


state 36
	one_token : POW .  (165)

	.  reduce 165


state 37
	one_token : MATMUL .  (166)

	.  reduce 166


state 38
	one_token : INC .  (167)

	.  reduce 167


state 39
	one_token : DEC .  (168)

	.  reduce 168


state 40
	one_token : ASSIGN .  (169)

	.  reduce 169


state 41
	one_token : IASSIGN .  (170)

	.  reduce 170


state 42
	one_token : EQ .  (171)

	.  reduce 171


state 43
	one_token : NEQ .  (172)

	.  reduce 172


state 44
	one_token : LT .  (173)

	.  reduce 173


state 45
	one_token : NOT .  (174)

	.  reduce 174


state 46
	one_token : AND .  (175)

	.  reduce 175


state 47
	one_token : OR .  (176)

	.  reduce 176


state 48
	one_token : VAR .  (177)

	.  reduce 177


state 49
	one_token : CONST .  (178)

	.  reduce 178


state 50
	one_token : STRUCT .  (179)

	.  reduce 179


state 51
	one_token : UNIT .  (180)

	.  reduce 180


state 52
	one_token : VARTYPE .  (181)

	.  reduce 181


state 53
	one_token : IF .  (182)

	.  reduce 182


state 54
	one_token : ELSE .  (183)

	.  reduce 183


state 55
	one_token : SWITCH .  (184)

	.  reduce 184


state 56
	one_token : MATCH .  (185)

	.  reduce 185


state 57
	one_token : CASE .  (186)

	.  reduce 186


state 58
	one_token : DEFAULT .  (187)

	.  reduce 187


state 59
	one_token : FALL .  (188)

	.  reduce 188


state 60
	one_token : WHILE .  (189)

	.  reduce 189


state 61
	one_token : FOR .  (190)

	.  reduce 190


state 62
	one_token : CONTINUE .  (191)

	.  reduce 191


state 63
	one_token : BREAK .  (192)

	.  reduce 192


state 64
	one_token : FUNC .  (193)

	.  reduce 193


state 65
	one_token : BOOL .  (195)

	.  reduce 195


state 66
	one_token : INT .  (196)

	.  reduce 196


state 67
	one_token : FLOAT .  (197)

	.  reduce 197


state 68
	one_token : CHAR .  (198)

	.  reduce 198


state 69
	one_token : STRING .  (199)

	.  reduce 199


state 70
	one_token : TENSOR .  (200)

	.  reduce 200


state 71
	one_token : RETURN .  (194)

	.  reduce 194


state 72
	one_token : COMMA .  (157)

	.  reduce 157


state 73
	one_token : BLIT .  (201)

	.  reduce 201


state 74
	one_token : ILIT .  (202)

	.  reduce 202


state 75
	one_token : FLIT .  (203)

	.  reduce 203


state 76
	one_token : CLIT .  (204)

	.  reduce 204


state 77
	one_token : SLIT .  (205)

	.  reduce 205


state 78
	one_token : LID .  (206)

	.  reduce 206


state 79
	one_token : UID .  (207)

	.  reduce 207


state 80
	%entry% : '\002' tokenseq .  (209)

	.  reduce 209


state 81
	tokenseq : tokens . EOF  (146)

	EOF  shift 95
	.  error


state 82
	tokens : one_token . tokens  (148)
	tokens : .  (147)

	SEMI  shift 21
	LPAREN  shift 22
	RPAREN  shift 23
	LBRACK  shift 24
	RBRACK  shift 25
	LBRACE  shift 26
	RBRACE  shift 27
	COLON  shift 28
	DOT  shift 29
	VERBAR  shift 30
	PLUS  shift 31
	MINUS  shift 32
	MUL  shift 33
	DIV  shift 34
	MOD  shift 35
	POW  shift 36
	MATMUL  shift 37
	INC  shift 38
	DEC  shift 39
	ASSIGN  shift 40
	IASSIGN  shift 41
	EQ  shift 42
	NEQ  shift 43
	LT  shift 44
	NOT  shift 45
	AND  shift 46
	OR  shift 47
	VAR  shift 48
	CONST  shift 49
	STRUCT  shift 50
	UNIT  shift 51
	VARTYPE  shift 52
	IF  shift 53
	ELSE  shift 54
	SWITCH  shift 55
	MATCH  shift 56
	CASE  shift 57
	DEFAULT  shift 58
	FALL  shift 59
	WHILE  shift 60
	FOR  shift 61
	CONTINUE  shift 62
	BREAK  shift 63
	FUNC  shift 64
	BOOL  shift 65
	INT  shift 66
	FLOAT  shift 67
	CHAR  shift 68
	STRING  shift 69
	TENSOR  shift 70
	RETURN  shift 71
	COMMA  shift 72
	BLIT  shift 73
	ILIT  shift 74
	FLIT  shift 75
	CLIT  shift 76
	SLIT  shift 77
	LID  shift 78
	UID  shift 79
	EOF  reduce 147

	tokens  goto 96
	one_token  goto 82


state 83
	ID : LID .  (10)

	.  reduce 10


state 84
	ID : UID .  (9)

	.  reduce 9


state 85
	vtdecl : STRUCT ID . LBRACE vdecl_list RBRACE  (33)

	LBRACE  shift 97
	.  error


state 86
	udecl : UNIT ID . LBRACE udecl_args RBRACE  (29)

	LBRACE  shift 98
	.  error


state 87
	vtdecl : VARTYPE ID . LBRACE type_list RBRACE  (32)

	LBRACE  shift 99
	.  error


state 88
	fdecl : FUNC ID . LPAREN formals_opt RPAREN return_typ LBRACE vdecl_list statement_list RBRACE  (36)

	LPAREN  shift 100
	.  error


state 89
	program : decls EOF .  (1)

	.  reduce 1


state 90
	decls : vdecl SEMI . decls  (3)
	decls : .  (2)

	STRUCT  shift 4
	UNIT  shift 5
	VARTYPE  shift 6
	FUNC  shift 7
	BOOL  shift 8
	INT  shift 9
	FLOAT  shift 10
	CHAR  shift 11
	STRING  shift 12
	UID  shift 13
	EOF  reduce 2

	decls  goto 101
	vdecl  goto 16
	udecl  goto 17
	vtdecl  goto 18
	fdecl  goto 19
	typ  goto 20


state 91
	decls : udecl decls .  (4)

	.  reduce 4


state 92
	decls : vtdecl decls .  (5)

	.  reduce 5


state 93
	decls : fdecl decls .  (6)

	.  reduce 6


state 94
	vdecl : typ LID . unit_expr_opt  (11)
	vdecl : typ LID . unit_expr_opt ASSIGN expr  (12)
	unit_expr_opt : .  (19)

	LBRACK  shift 102
	SEMI  reduce 19
	RPAREN  reduce 19
	ASSIGN  reduce 19
	COMMA  reduce 19

	unit_expr_opt  goto 103


state 95
	tokenseq : tokens EOF .  (146)

	.  reduce 146


state 96
	tokens : one_token tokens .  (148)

	.  reduce 148


state 97
	vtdecl : STRUCT ID LBRACE . vdecl_list RBRACE  (33)
	vdecl_list : .  (7)

	BOOL  shift 8
	INT  shift 9
	FLOAT  shift 10
	CHAR  shift 11
	STRING  shift 12
	UID  shift 13
	RBRACE  reduce 7

	vdecl  goto 104
	vdecl_list  goto 105
	typ  goto 20


state 98
	udecl : UNIT ID LBRACE . udecl_args RBRACE  (29)
	units_opt : .  (23)

	LPAREN  shift 106
	MINUS  shift 107
	NOT  shift 108
	BLIT  shift 109
	ILIT  shift 110
	FLIT  shift 111
	CLIT  shift 112
	SLIT  shift 113
	LID  shift 114
	UID  shift 84
	RBRACE  reduce 23

	ID  goto 115
	expr  goto 116
	units_opt  goto 117
	unit_list  goto 118
	udecl_args  goto 119


state 99
	vtdecl : VARTYPE ID LBRACE . type_list RBRACE  (32)

	BOOL  shift 8
	INT  shift 9
	FLOAT  shift 10
	CHAR  shift 11
	STRING  shift 12
	UID  shift 13
	.  error

	typ  goto 120
	type_list  goto 121


state 100
	fdecl : FUNC ID LPAREN . formals_opt RPAREN return_typ LBRACE vdecl_list statement_list RBRACE  (36)
	formals_opt : .  (37)

	BOOL  shift 8
	INT  shift 9
	FLOAT  shift 10
	CHAR  shift 11
	STRING  shift 12
	UID  shift 13
	RPAREN  reduce 37

	vdecl  goto 122
	typ  goto 20
	formals_opt  goto 123
	formals_list  goto 124


state 101
	decls : vdecl SEMI decls .  (3)

	.  reduce 3


state 102
	unit_expr_opt : LBRACK . ID RBRACK unit_expr_opt  (20)
	unit_expr_opt : LBRACK . ID ILIT RBRACK unit_expr_opt  (21)
	unit_expr_opt : LBRACK . ID MINUS ILIT RBRACK unit_expr_opt  (22)

	LID  shift 83
	UID  shift 84
	.  error

	ID  goto 125


state 103
	vdecl : typ LID unit_expr_opt .  (11)
	vdecl : typ LID unit_expr_opt . ASSIGN expr  (12)

	ASSIGN  shift 126
	SEMI  reduce 11
	RPAREN  reduce 11
	COMMA  reduce 11


state 104
	vdecl_list : vdecl . SEMI vdecl_list  (8)

	SEMI  shift 127
	.  error


state 105
	vtdecl : STRUCT ID LBRACE vdecl_list . RBRACE  (33)

	RBRACE  shift 128
	.  error


state 106
	expr : LPAREN . expr RPAREN  (140)

	LPAREN  shift 106
	MINUS  shift 107
	NOT  shift 108
	BLIT  shift 109
	ILIT  shift 110
	FLIT  shift 111
	CLIT  shift 112
	SLIT  shift 113
	LID  shift 129
	.  error

	expr  goto 130


state 107
	expr : MINUS . expr  (134)

	LPAREN  shift 106
	MINUS  shift 107
	NOT  shift 108
	BLIT  shift 109
	ILIT  shift 110
	FLIT  shift 111
	CLIT  shift 112
	SLIT  shift 113
	LID  shift 129
	.  error

	expr  goto 131


state 108
	expr : NOT . expr  (133)

	LPAREN  shift 106
	MINUS  shift 107
	NOT  shift 108
	BLIT  shift 109
	ILIT  shift 110
	FLIT  shift 111
	CLIT  shift 112
	SLIT  shift 113
	LID  shift 129
	.  error

	expr  goto 132


state 109
	expr : BLIT .  (113)

	.  reduce 113


state 110
	expr : ILIT . unit_expr_opt  (112)
	unit_expr_opt : .  (19)

	LBRACK  shift 102
	SEMI  reduce 19
	RPAREN  reduce 19
	RBRACE  reduce 19
	COLON  reduce 19
	PLUS  reduce 19
	MINUS  reduce 19
	MUL  reduce 19
	DIV  reduce 19
	MOD  reduce 19
	POW  reduce 19
	INC  reduce 19
	DEC  reduce 19
	EQ  reduce 19
	GEQ  reduce 19
	NEQ  reduce 19
	LEQ  reduce 19
	GT  reduce 19
	LT  reduce 19
	AND  reduce 19
	OR  reduce 19
	COMMA  reduce 19
	LID  reduce 19
	UID  reduce 19

	unit_expr_opt  goto 133


state 111
	expr : FLIT . unit_expr_opt  (114)
	unit_expr_opt : .  (19)

	LBRACK  shift 102
	SEMI  reduce 19
	RPAREN  reduce 19
	RBRACE  reduce 19
	COLON  reduce 19
	PLUS  reduce 19
	MINUS  reduce 19
	MUL  reduce 19
	DIV  reduce 19
	MOD  reduce 19
	POW  reduce 19
	INC  reduce 19
	DEC  reduce 19
	EQ  reduce 19
	GEQ  reduce 19
	NEQ  reduce 19
	LEQ  reduce 19
	GT  reduce 19
	LT  reduce 19
	AND  reduce 19
	OR  reduce 19
	COMMA  reduce 19
	LID  reduce 19
	UID  reduce 19

	unit_expr_opt  goto 134


state 112
	expr : CLIT .  (115)

	.  reduce 115


state 113
	expr : SLIT .  (116)

	.  reduce 116


state 114
	ID : LID .  (10)
	expr : LID .  (117)
	expr : LID . DOT LID  (118)
	expr : LID . ASSIGN expr  (137)
	expr : LID . ASSIGN structlit_expr  (138)
	expr : LID . DOT LID ASSIGN expr  (139)
	expr : LID . LPAREN args_opt RPAREN  (141)

	LPAREN  shift 135
	DOT  shift 136
	ASSIGN  shift 137
	SEMI  reduce 117
	RPAREN  reduce 117
	RBRACE  reduce 10
	COLON  reduce 10
	VERBAR  reduce 10
	PLUS  reduce 117
	MINUS  reduce 117
	MUL  reduce 117
	DIV  reduce 117
	MOD  reduce 117
	POW  reduce 117
	INC  reduce 117
	DEC  reduce 117
	IASSIGN  reduce 10
	EQ  reduce 117
	GEQ  reduce 117
	NEQ  reduce 117
	LEQ  reduce 117
	GT  reduce 117
	LT  reduce 117
	AND  reduce 117
	OR  reduce 117
	LID  reduce 117
	UID  reduce 117


state 115
	unit_list : ID .  (25)
	unit_list : ID . VERBAR unit_list  (26)

	VERBAR  shift 138
	RBRACE  reduce 25


state 116
	udecl_args : expr . ID  (27)
	expr : expr . PLUS expr  (119)
	expr : expr . MINUS expr  (120)
	expr : expr . MUL expr  (121)
	expr : expr . DIV expr  (122)
	expr : expr . POW expr  (123)
	expr : expr . MOD expr  (124)
	expr : expr . EQ expr  (125)
	expr : expr . GEQ expr  (126)
	expr : expr . NEQ expr  (127)
	expr : expr . LEQ expr  (128)
	expr : expr . GT expr  (129)
	expr : expr . LT expr  (130)
	expr : expr . AND expr  (131)
	expr : expr . OR expr  (132)
	expr : expr . INC  (135)
	expr : expr . DEC  (136)

	PLUS  shift 139
	MINUS  shift 140
	MUL  shift 141
	DIV  shift 142
	MOD  shift 143
	POW  shift 144
	INC  shift 145
	DEC  shift 146
	EQ  shift 147
	GEQ  shift 148
	NEQ  shift 149
	LEQ  shift 150
	GT  shift 151
	LT  shift 152
	AND  shift 153
	OR  shift 154
	LID  shift 83
	UID  shift 84
	.  error

	ID  goto 155


state 117
	udecl_args : units_opt .  (28)

	.  reduce 28


state 118
	units_opt : unit_list .  (24)

	.  reduce 24


state 119
	udecl : UNIT ID LBRACE udecl_args . RBRACE  (29)

	RBRACE  shift 156
	.  error


state 120
	type_list : typ .  (30)
	type_list : typ . VERBAR type_list  (31)

	VERBAR  shift 157
	RBRACE  reduce 30


state 121
	vtdecl : VARTYPE ID LBRACE type_list . RBRACE  (32)

	RBRACE  shift 158
	.  error


state 122
	formals_list : vdecl .  (39)
	formals_list : vdecl . COMMA formals_list  (40)

	COMMA  shift 159
	RPAREN  reduce 39


state 123
	fdecl : FUNC ID LPAREN formals_opt . RPAREN return_typ LBRACE vdecl_list statement_list RBRACE  (36)

	RPAREN  shift 160
	.  error


state 124
	formals_opt : formals_list .  (38)

	.  reduce 38


state 125
	unit_expr_opt : LBRACK ID . RBRACK unit_expr_opt  (20)
	unit_expr_opt : LBRACK ID . ILIT RBRACK unit_expr_opt  (21)
	unit_expr_opt : LBRACK ID . MINUS ILIT RBRACK unit_expr_opt  (22)

	RBRACK  shift 161
	MINUS  shift 162
	ILIT  shift 163
	.  error


state 126
	vdecl : typ LID unit_expr_opt ASSIGN . expr  (12)

	LPAREN  shift 106
	MINUS  shift 107
	NOT  shift 108
	BLIT  shift 109
	ILIT  shift 110
	FLIT  shift 111
	CLIT  shift 112
	SLIT  shift 113
	LID  shift 129
	.  error

	expr  goto 164


state 127
	vdecl_list : vdecl SEMI . vdecl_list  (8)
	vdecl_list : .  (7)

	BOOL  shift 8
	INT  shift 9
	FLOAT  shift 10
	CHAR  shift 11
	STRING  shift 12
	UID  shift 13
	LPAREN  reduce 7
	LBRACE  reduce 7
	RBRACE  reduce 7
	MINUS  reduce 7
	NOT  reduce 7
	IF  reduce 7
	SWITCH  reduce 7
	MATCH  reduce 7
	FALL  reduce 7
	FOR  reduce 7
	CONTINUE  reduce 7
	BREAK  reduce 7
	RETURN  reduce 7
	BLIT  reduce 7
	ILIT  reduce 7
	FLIT  reduce 7
	CLIT  reduce 7
	SLIT  reduce 7
	LID  reduce 7

	vdecl  goto 104
	vdecl_list  goto 165
	typ  goto 20


state 128
	vtdecl : STRUCT ID LBRACE vdecl_list RBRACE .  (33)

	.  reduce 33


state 129
	expr : LID .  (117)
	expr : LID . DOT LID  (118)
	expr : LID . ASSIGN expr  (137)
	expr : LID . ASSIGN structlit_expr  (138)
	expr : LID . DOT LID ASSIGN expr  (139)
	expr : LID . LPAREN args_opt RPAREN  (141)

	LPAREN  shift 135
	DOT  shift 136
	ASSIGN  shift 137
	SEMI  reduce 117
	RPAREN  reduce 117
	RBRACE  reduce 117
	COLON  reduce 117
	PLUS  reduce 117
	MINUS  reduce 117
	MUL  reduce 117
	DIV  reduce 117
	MOD  reduce 117
	POW  reduce 117
	INC  reduce 117
	DEC  reduce 117
	EQ  reduce 117
	GEQ  reduce 117
	NEQ  reduce 117
	LEQ  reduce 117
	GT  reduce 117
	LT  reduce 117
	AND  reduce 117
	OR  reduce 117
	COMMA  reduce 117
	LID  reduce 117
	UID  reduce 117


state 130
	expr : expr . PLUS expr  (119)
	expr : expr . MINUS expr  (120)
	expr : expr . MUL expr  (121)
	expr : expr . DIV expr  (122)
	expr : expr . POW expr  (123)
	expr : expr . MOD expr  (124)
	expr : expr . EQ expr  (125)
	expr : expr . GEQ expr  (126)
	expr : expr . NEQ expr  (127)
	expr : expr . LEQ expr  (128)
	expr : expr . GT expr  (129)
	expr : expr . LT expr  (130)
	expr : expr . AND expr  (131)
	expr : expr . OR expr  (132)
	expr : expr . INC  (135)
	expr : expr . DEC  (136)
	expr : LPAREN expr . RPAREN  (140)

	RPAREN  shift 166
	PLUS  shift 139
	MINUS  shift 140
	MUL  shift 141
	DIV  shift 142
	MOD  shift 143
	POW  shift 144
	INC  shift 145
	DEC  shift 146
	EQ  shift 147
	GEQ  shift 148
	NEQ  shift 149
	LEQ  shift 150
	GT  shift 151
	LT  shift 152
	AND  shift 153
	OR  shift 154
	.  error


state 131
	expr : expr . PLUS expr  (119)
	expr : expr . MINUS expr  (120)
	expr : expr . MUL expr  (121)
	expr : expr . DIV expr  (122)
	expr : expr . POW expr  (123)
	expr : expr . MOD expr  (124)
	expr : expr . EQ expr  (125)
	expr : expr . GEQ expr  (126)
	expr : expr . NEQ expr  (127)
	expr : expr . LEQ expr  (128)
	expr : expr . GT expr  (129)
	expr : expr . LT expr  (130)
	expr : expr . AND expr  (131)
	expr : expr . OR expr  (132)
	expr : MINUS expr .  (134)
	expr : expr . INC  (135)
	expr : expr . DEC  (136)

	MUL  shift 141
	DIV  shift 142
	MOD  shift 143
	POW  shift 144
	SEMI  reduce 134
	RPAREN  reduce 134
	RBRACE  reduce 134
	COLON  reduce 134
	PLUS  reduce 134
	MINUS  reduce 134
	INC  reduce 134
	DEC  reduce 134
	EQ  reduce 134
	GEQ  reduce 134
	NEQ  reduce 134
	LEQ  reduce 134
	GT  reduce 134
	LT  reduce 134
	AND  reduce 134
	OR  reduce 134
	COMMA  reduce 134
	LID  reduce 134
	UID  reduce 134

